tdf#112452 : Refine the fix for tdf#94561

Do the changes in 7c0f6b9d0fb8d7d9e54865ccf1047bb8f8148101
only if the destination is not an undo document.

Also removes the below unnecessary change in that commit.

if ( IsNoteCaption( pOldObject ) )
{
    pOldObject = aIter.Next();
    continue;
}

Change-Id: Ib18324ed16e91dbd932d449858a489dc09c53713